# Tetris

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  NOTES.md  README.md  TODO.md  compile.sh  controls.ini  main.cpp  out.txt  run.sh  vcpkg-configuration.json  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  issue_template.md  todo.md
include/: App.hpp  AppRenderer.hpp  AppState.hpp  BoardRenderer.hpp  CircularBuffer.hpp  Clock.hpp  Common.hpp  Constants.hpp  EventHandler.hpp  FPS.hpp  GameRenderer.hpp  HUDRenderer.hpp  IPlatform.hpp  IRenderer.hpp  IWindow.hpp  LockDelay.hpp  Matrix.hpp  NextQueue.hpp  NumberRenderer.hpp  PlatformSDL.hpp  PlatformSDL_TTF.hpp  Playfield.hpp  Point.hpp  RenderGame.hpp  SDLPlatform.hpp  SDLRendererBackend.hpp  SDLWindowBackend.hpp  ScreenPos.hpp  SevenBag.hpp  Size.hpp  Tetris.hpp  TetrisApp.hpp  TetrisRenderer.hpp  Tetromino.hpp  TextRenderer.hpp  Timer.hpp  mechanics.hpp  pixel.hpp  srs.hpp
include/app/: Tetris.hpp  tetris.hpp
include/core/: App.hpp  Matrix.hpp  NextQueue.hpp  Playfield.hpp  SevenBag.hpp  Tetris.hpp  TetrisApp.hpp  TetrisGame.hpp  TetrisGame_Types.hpp  Tetris_Move.hpp  Tetromino.hpp  command.hpp  event-handler.hpp  game-state.hpp  matrix-operations.hpp  matrix-tile.hpp  matrix.hpp  shape.hpp  srs.hpp  super-rotation-system.hpp  tetris-move.hpp  tetromino-controller.hpp  tetromino-generator.hpp  tetromino-management.hpp  tetromino-movement.hpp  tetromino-operations.hpp  tetromino-queue.hpp  tetromino-rotation.hpp  tetromino-type.hpp  tetromino.hpp  tile-state.hpp
include/platform/: EventHandler.hpp  PlatformSDL.hpp  PlatformSDL_IMG.hpp  PlatformSDL_TTF.hpp
include/render/: BoardRenderer.hpp  Draw.hpp  GameRenderer.hpp  Graphics.hpp  HUDRenderer.hpp  TetrisGameRenderer.hpp  Tetris_Paint.hpp  TextRenderer.hpp  matrix-renderer.hpp  pixel.hpp  render-game-objects.hpp  render-ui.hpp  render.hpp  tetris-paint.hpp  tetris-renderer.hpp  tetromino-renderer.hpp  text-renderer.hpp  ui-renderer.hpp  ui.hpp
include/util/: CircularIntegral.hpp  CircularUint.hpp  Clock.hpp  Point.hpp  Timer.hpp  circular-array.hpp  (+15 more)
scripts/: install-linux-dependencies.sh  vcpkg_linux_dependencies.sh
src/: App.cpp  AppRenderer.cpp  AppState.cpp  BoardRenderer.cpp  CMakeLists.txt  Clock.cpp  EventHandler.cpp  FPS.cpp  GameRenderer.cpp  HUDRenderer.cpp  LockDelay.cpp  Makefile  Matrix.cpp  NextQueue.cpp  NumberRenderer.cpp  PlatformSDL.cpp  PlatformSDL_TTF.cpp  Playfield.cpp  RenderGame.cpp  SDLPlatform.cpp  SDLRendererBackend.cpp  SDLWindowBackend.cpp  ScreenPos.cpp  SevenBag.cpp  Tetris.cpp  TetrisApp.cpp  TetrisRenderer.cpp  Tetromino.cpp  TextRenderer.cpp  main  main.cpp  mechanics.cpp  pixel.cpp  srs.cpp
src/API/: GameCore.cpp  GameCore.hpp  SDLUtils.cpp  SDLUtils.hpp  Screen.hpp
src/Components/: Context.cpp  Context.hpp  Draw.cpp  Draw.h  Draw.hpp  EventHandler.cpp  EventHandler.hpp  Graphics.cpp  Graphics.hpp  Render.cpp  Render.h  Renderer.cpp  SDLComponents.cpp  SDLComponents.h  Surface.cpp  Surface.h  Text.hpp  Window.cpp  Window.h  sdl_surface.cpp  sdl_window.cpp  sdl_window.h  ttf_font.cpp
src/Components/Commands/: Command.hpp  Drop.cpp  Drop.hpp  Move.cpp  Move.hpp  Rotate.cpp  Rotate.hpp  Store.cpp  Store.hpp
src/Components/Event/: EventHandler.cpp  EventHandler.hpp
src/Components/Event/Commands/: Command.hpp  Drop.hpp  Move.hpp  Rotate.hpp  Store.cpp  Store.hpp
src/Components/Visual/: Draw.cpp  Draw.hpp  Graphics.cpp  Graphics.hpp  Text.cpp  Text.hpp
src/Game/: Block.cpp  Block.h  Board.cpp  Board.hpp  Coordinate.cpp  Coordinate.hpp  CoordinatePoint.cpp  CoordinatePoint.h  Direction.hpp  Mechanics.cpp  Mechanics.hpp  Piece.cpp  Piece.hpp  Player.cpp  Player.hpp  Tetris.cpp  Tetris.hpp  Tetromino.cpp  Tetromino.h  Tile.hpp  Variables.hpp
src/Game/Objects/: Board.cpp  Board.hpp  Coordinate.cpp  Coordinate.hpp  Grid.cpp  Grid.hpp  Logic.cpp  Logic.hpp  Mechanics.cpp  Mechanics.hpp  Piece.cpp  Piece.hpp  PieceManager.cpp  PieceManager.hpp  TetrisBoard.cpp  TetrisBoard.hpp
src/SDL/: Render.cpp  Render.hpp  Window.cpp  Window.hpp
src/api/: Core.cpp  Core.hpp  SDL-Subsystems.cpp  SDL-Subsystems.hpp
src/api/sdl/: Font.cpp  Font.hpp  Renderer.cpp  Window.hpp
src/app/: CMakeLists.txt  Tetris.cpp  main.cpp  tetris.cpp
src/core/: App.cpp  CMakeLists.txt  Matrix.cpp  NextQueue.cpp  Playfield.cpp  SevenBag.cpp  Tetris.cpp  TetrisApp.cpp  TetrisGame.cpp  Tetris_Move.cpp  Tetromino.cpp  command.cpp  event-handler.cpp  game-state.cpp  matrix-operations.cpp  matrix.cpp  shape.cpp  srs.cpp  super-rotation-system.cpp  tetris-move.cpp  tetromino-controller.cpp  tetromino-generator.cpp  tetromino-management.cpp  tetromino-movement.cpp  tetromino-operations.cpp  tetromino-queue.cpp  tetromino.cpp
src/core/include/: Board.hpp  Command.hpp  Coordinate.hpp  EventHandler.hpp  Flat2DArray.hpp  GameConstants.hpp  Mechanics.hpp  Playfield.hpp  Tetromino.hpp  Vector2.hpp
src/core/src/: Board.cpp  Command.cpp  Coordinate.cpp  Drop.cpp  EventHandler.cpp  Mechanics.cpp  Move.cpp  Playfield.cpp  Rotate.cpp
src/platform/: CMakeLists.txt  EventHandler.cpp  PlatformSDL.cpp  PlatformSDL_IMG.cpp  PlatformSDL_TTF.cpp
src/render/: BoardRenderer.cpp  CMakeLists.txt  GameRenderer.cpp  HUDRenderer.cpp  Renderer.cpp  TetrisGameRenderer.cpp  Tetris_Paint.cpp  TextRenderer.cpp  matrix-renderer.cpp  pixel.cpp  render-game-objects.cpp  render-ui.cpp  render.cpp  tetris-paint.cpp  tetris-renderer.cpp  tetromino-renderer.cpp  text-renderer.cpp  ui-renderer.cpp  ui.cpp
src/render/include/: Context.hpp  Draw.hpp  Graphics.hpp  Renderer.hpp
src/render/src/: Window.cpp
src/util/: CMakeLists.txt  Clock.cpp  circular-array.cpp  color.cpp  geometry.cpp  renderer.cpp  ring-buffer.cpp  screen-context.cpp  text.cpp  vector2-operations.cpp  vector2.cpp  window.cpp
test/: graphics.cpp  piece.cpp
tests/core/: CMakeLists.txt  test-matrix-operations.cpp  test-matrix.cpp  test-tetromino-operations.cpp  test-tetromino.cpp  testFlat2DArray.cpp  testPlayfield.cpp
tests/util/: CMakeLists.txt  test-flat-array-map.cpp  test-ring-buffer.cpp
